--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/img/vite.svg" />
+
   <script src="https://kit.fontawesome.com/64c9fbe692.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React Starter - Coding Academy</title>
+  <title>Zenefy</title>
+  <link rel="icon" type="image/x-icon" href="/public/img/logo.png">
 </head>
 
 <body>
