Add logo, PlayBar CSS closer to Spotify

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/64c9fbe692.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zenefy</title>
-  <link rel="icon" type="image/x-icon" href="/public/img/logo.png">
+  <link rel="icon" type="image/x-icon" href="/public/img/zenefy-logo.png">
 </head>
 
 <body>
